# flip-fl-base

./: .codecov.yml  .env.development  .env.production.template  .env.test  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  check_required_files.sh  net-1_project.yml  net-1_project_prod.yml  net-1_project_stag.yml  net-2_project.yml  net_project.yml  provision_client.sh  pyproject.toml
.github/: RELEASE_NOTES_TEMPLATE.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT-FORM.yml  FEATURE-ISSUE-FORM.yml  TASK-ISSUE-FORM.yml
.github/workflows/: check-package-metadata.yml  check-required-files.yml  check-version-bump.yml  cleanup-pr-s3.yml  docker_build_fl.yml  fl_api.yml  pr-release-notes-preview.yml  pr_acceptance_criteria.yml  push-app-to-s3-dev.yml  push-app-to-s3-prod.yml  push-app-to-s3-stag.yml  push-pr-to-s3.yml  release-pypi.yml  unit-tests.yml  validate-pr-source-branch.yml
deploy/: compose.dev.yml  compose.test.yml  compose.yml  release.sh
docs/: conf.py  index.rst  overview.rst  requirements.txt
docs/_static/: style.css
docs/reference/: index.rst
docs/tutorials/: TUTORIAL_SUMMARY.md  hello-world-flip.rst  hello-xgboost-flip.rst  index.rst  monai-spleen-segmentation.rst
fl_services/: README.md
fl_services/fl-api-base/: .env.development  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
fl_services/fl-api-base/fl_api/: app.py  config.py
fl_services/fl-api-base/fl_api/core/: dependencies.py
fl_services/fl-api-base/fl_api/routers/: application.py  health.py  jobs.py  system.py
fl_services/fl-api-base/fl_api/startup/: session_manager.py
fl_services/fl-api-base/fl_api/utils/: constants.py  exception_handlers.py  flip_session.py  io_utils.py  logger.py  prepare_config.py  schemas.py  upload.py
fl_services/fl-api-base/tests/: conftest.py  test_app.py
fl_services/fl-api-base/tests/core/: dependencies.py
fl_services/fl-api-base/tests/routers/: test_application.py  test_jobs.py  test_system.py
fl_services/fl-api-base/tests/startup/: test_session_manager.py
fl_services/fl-api-base/tests/utils/: test_flip_session.py  test_nhsflame_session.py  test_prepare_config.py  test_upload.py
fl_services/fl-base/: Dockerfile  README.md
fl_services/fl-client/: Dockerfile  README.md
fl_services/fl-client/fl-client/: entrypoint.sh
fl_services/fl-server/: Dockerfile  README.md
fl_services/fl-server/fl-server/: entrypoint.sh
flip/: __init__.py
flip/components/: __init__.py  cleanup.py  custom_percentile_privacy.py  evaluation_json_generator.py  flip_server_event_handler.py  pt_model_locator.py
flip/constants/: __init__.py  flip_constants.py  job_types.py  pt_constants.py
flip/controllers/: __init__.py  cross_site_model_eval.py  fed_evaluation.py  init_evaluation.py  init_training.py  scatter_and_gather.py
flip/core/: __init__.py  base.py  factory.py  standard.py
flip/executors/: __init__.py  evaluator.py  trainer.py  validator.py
flip/flower/: metrics.py
flip/nvflare/: __init__.py  metrics.py
flip/nvflare/components/: __init__.py  cleanup.py  custom_percentile_privacy.py  evaluation_json_generator.py  flip_client_event_handler.py  flip_server_event_handler.py  persist_and_cleanup.py  pt_model_locator.py  stage_percentile_privacy.py  validation_json_generator.py
flip/nvflare/controllers/: __init__.py  cross_site_model_eval.py  fed_evaluation.py  init_evaluation.py  init_training.py  scatter_and_gather.py  scatter_and_gather_ldm.py
flip/nvflare/executors/: __init__.py  evaluator.py  monai_fl_adapter.py  trainer.py  validator.py
flip/utils/: __init__.py  flip_dataset.py  model_weights_handling.py  utils.py
scripts/: check-dev-paths.sh  merge-job-dirs.sh  provision-additional-client.sh  provision-network.sh
src/diffusion_model/: README.md  required_files.json
src/evaluation/: README.md  required_files.json
src/fed_opt/: README.md  required_files.json
tests/examples/testing/: .env.testing  cleanup.sh
tests/unit/: conftest.py  test_convert_weights_to_diff.py  test_flip_factory.py  test_flip_package.py  test_flip_standard.py  test_flip_utils.py
tests/unit/components/: test_cleanup.py  test_custom_percentile_privacy.py  test_evaluation_json_generator.py  test_evaluation_pt_model_locator.py  test_flip_client_event_handler.py  test_flip_server_event_handler.py  test_persist_and_cleanup.py  test_pt_model_locator.py  test_validation_json_generator.py
tests/unit/constants/: test_flip_constants.py
tests/unit/controllers/: test_cross_site_model_eval.py  test_fed_evaluation.py  test_init_evaluation.py  test_init_training.py  test_scatter_and_gather.py  test_scatter_and_gather_ldm.py
tests/unit/core/: test_base.py  test_factory.py  test_standard.py
tests/unit/executors/: test_evaluator.py  test_trainer.py  test_validator.py
tests/unit/flower/: __init__.py  test_metrics.py
tests/unit/nvflare/: test_metrics.py
tests/unit/utils/: test_flip_dataset.py  test_model_weights_handling.py  test_utils.py
tutorials/hello_world/: README.md  client.py  job.py  model.py  requirements.txt
tutorials/image_classification/xray_classification/: .env.app  Makefile  README.md  query.md
tutorials/image_evaluation/3d_spleen_segmentation_evaluation/: .env.app  Makefile  README.md
tutorials/image_segmentation/3d_spleen_segmentation/: .env.app  Makefile  README.md  pyproject.toml
tutorials/image_segmentation/3d_spleen_segmentation/app_files/: config.json  flip_datasets.py  models.py  trainer.py  transforms.py  validator.py
tutorials/image_segmentation/3d_spleen_segmentation/app_files/configs/: train.json
tutorials/image_segmentation/3d_spleen_segmentation/utils/: create_spleen_accession_csv.py  download_spleen_dataset.py
tutorials/image_segmentation/new_image_segmentation/: README.md  client.py  job.py  model.py  requirements.txt
tutorials/image_synthesis/latent_diffusion_model/: .env.app  README.md
tutorials/testing/: .env.testing  Makefile  app_organiser.sh  cleanup.sh  compose.yml
tutorials/testing/data_download_utils/: preprocess_spleen_data.py
(+118 files in other folders)
